--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
     <meta property="og:title" content="Aureon AI Engine Console" />
     <meta property="og:description" content="Professional trading analytics dashboard for real-time market analysis and AI-powered trading signals." />
     <meta property="og:type" content="website" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Aureon AI Engine Console" />
-    <meta name="twitter:description" content="Professional trading analytics dashboard for real-time market analysis and AI-powered trading signals." />
+
   </head>
 
   <body>
     <div id="root"></div>
 
-    <!-- IMPORTANT: Use relative path because Vite sets base in vite.config.ts -->
-    <script type="module" src="/AUREON-AI-FRONT-END/src/main.tsx"></script>
+    <!-- Correct Vite entrypoint -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
