--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
 
+    <!-- ✅ FIXED FAVICON PATH FOR GITHUB PAGES -->
+    <link rel="icon" href="/AUREON-AI-FRONT-END/favicon.ico" />
+
   </head>
 
   <body>
     <div id="root"></div>
 
-    <!-- Correct Vite entrypoint -->
+    <!-- Vite entrypoint (works because vite.config.ts sets base) -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
