--- a/index.html
+++ b/index.html
@@ -14,24 +14,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aureon AI Engine Console | Trading Analytics Dashboard</title>
-    <meta name="description" content="Professional trading analytics dashboard for real-time market analysis, signal monitoring, and AI reasoning inspection." />
-    <meta name="author" content="Aureon AI" />
-    <meta name="theme-color" content="#0d1117" />
 
-    <meta property="og:title" content="Aureon AI Engine Console" />
-    <meta property="og:description" content="Professional trading analytics dashboard for real-time market analysis and AI-powered trading signals." />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-
-    <!-- ✅ FIXED FAVICON PATH FOR GITHUB PAGES -->
-    <link rel="icon" href="/AUREON-AI-FRONT-END/favicon.ico" />
+    <!-- Favicon (must use %BASE_URL% for GitHub Pages) -->
+    <link rel="icon" href="%BASE_URL%favicon.ico" />
 
   </head>
 
   <body>
     <div id="root"></div>
 
-    <!-- Vite entrypoint (works because vite.config.ts sets base) -->
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- Use Vite placeholder, NOT absolute paths -->
+    <script type="module" src="%BASE_URL%src/main.tsx"></script>
   </body>
 </html>
