--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aureon AI Engine Console | Trading Analytics Dashboard</title>
+    <title>Aureon AI Engine Console</title>
 
-    <!-- Favicon (must use %BASE_URL% for GitHub Pages) -->
-    <link rel="icon" href="%BASE_URL%favicon.ico" />
-
+    <!-- Correct favicon path for GitHub Pages -->
+    <link rel="icon" href="./favicon.ico" />
   </head>
 
   <body>
     <div id="root"></div>
 
-    <!-- Use Vite placeholder, NOT absolute paths -->
-    <script type="module" src="%BASE_URL%src/main.tsx"></script>
+    <!-- Correct Vite entrypoint (MUST be relative) -->
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
